	* Added changelog to documentation website.
	* Helpers.Async.BackgroundThreadInvoke() now returns a Task for the created operation.
	* Helpers.Argument.ValidateIsNotNullOrEmpty() supports more types of collections.
	* Helpers.Debug.ToDebugString() now reports correct length for collections that contain more than 64 items.

9.3.2
	* Fixed race-condition in fast-exiting ExternalTool.

9.3.1
	* Removed extraneous newlines from GetAllExceptionMessages.

9.3.0
	* Added Helpers.Debug.GetAllExceptionMessages to dump all messages of exceptions, including inner exceptions.

9.2.2
	* Censored strings for ExternalTool that are empty are now ignored.

9.2.0
	* ExternalTool now supports censoring sensitive command line arguments.

9.1.0
	* SemaphoreLock now has overloads with CancellationToken.
	* Added DelegatingLogListener.
	* Added Helpers.Timeout.GetCancellationToken() for easy creation of finite cancellation tokens.
	* Logging API now accepts FormattableString to help with potential future optimization.

9.0.0
	* .NET Standard DOES NOT WORK. Exterminated!

8.0.0
	* Now targeting .NET Standard 1.4 + .NET Framework 4.6.2 + UWP 10240.
	* Updated dependencies.
	* Renamed Core -> NetStandard.
	* Removed xunit console runner from use in development environment. It had issues with UWP. Not worth the effort.

7.1.2
	* Removed misleading commentary about SDK versions. We target 10240, that's it.

7.1.1
	* Fixed defect in PlayReadyLicenseAcquirer that caused reactive PlayReady activation to fail.

7.1.0
	* Added base64url to/from conversion helpers.
	* Added ProtectedXml helpers. You can now encrypt&sign and verify&decrypt XmlDocuments with a one-liner helper method. DotNet only, for now.
	* Added Jose helpers. You can now encrypt&sign and verify&decrypt arbitrary data packaged into JOSE objects with a one-liner helper method. DotNet only, for now. Uses jose-jwt underneath.

7.0.0